# zlicenser

./: Cargo.toml  NOTICE  README.md  deny.toml  publish.sh  test_ci.sh
.github/workflows/: ci.yml
apps/zlicenser-gui/frontend/: package-lock.json  package.json
apps/zlicenser-gui/frontend/src/routes/: +page.svelte
apps/zlicenser-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/zlicenser-gui/src-tauri/src/: main.rs
apps/zlicenser-tui/: Cargo.toml
apps/zlicenser-tui/src/: main.rs
bindings/go/: Cargo.toml  cbindgen.toml  go.mod  zlicenser.go  zlicenser.h  zlicenser_test.go
bindings/go/src/: lib.rs
bindings/nodejs/: Cargo.toml  package-lock.json  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/zlicenser/: __init__.py
crates/zlicenser/: Cargo.toml
crates/zlicenser/src/: lib.rs
crates/zlicenser/src/client/: mod.rs
crates/zlicenser/src/marketplace/: mod.rs
crates/zlicenser/src/shim/: mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  fingerprinting.md
src/: lib.rs
xtask/src/: main.rs
