[package]
name = "zlicenser"
version = "0.1.1"
description = "Hardware-bound software licensing and leak tracing for commercial binaries: no ring-0 drivers required."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/arsalan-anwari/zlicenser"
keywords = ["licensing", "drm", "hardware-fingerprint", "binary-encryption", "anti-piracy"]
categories = ["cryptography", "development-tools"]
