[package]
name = "zlicenser-python"
version = "0.1.0"
edition = "2021"
authors = ["ZAL Analytics <arsalan@anwari.nl>"]
publish = false

[lib]
name = "zlicenser_python"
crate-type = ["cdylib"]

[dependencies]
zlicenser = { path = "../../crates/zlicenser" }
pyo3 = { version = "0.25", features = ["extension-module"] }
